# qol

./: .gitignore  CMakeLists.txt  README.md  _clock.h  _getword.h  clock.h  getword.h
c/: _clock.h  _getword.h  getword.h  mathtree.h  posix.h  tree.h
c/a.out.dSYM/Contents/Resources/Relocations/aarch64/: a.out.yml
include/qol/c/: clock.h  getmath.h  getword.h  mathtree.h  tree.h
include/qol/cpp/: random.h
src/c/: clock.c  getmath.c  getword.c  mathtree.c  posix.c  tree.c
